crates/mako/src/snapshots/mako__transform_react__tests__normal_module_with_react_refresh.snap
---
source: crates/mako/src/transform_react.rs
expression: "transform_ast_with(&mut ast.ast, &mut visitor)"
---
import * as RefreshRuntime from 'react-refresh';
var prevRefreshReg;
var prevRefreshSig;
prevRefreshReg = window.$RefreshReg$;
prevRefreshSig = window.$RefreshSig$;
window.$RefreshReg$ = (type, id)=>{
    RefreshRuntime.register(type, module.id + id);
};
window.$RefreshSig$ = RefreshRuntime.createSignatureFunctionForTransform;
import { jsxDEV as _jsxDEV } from "react/jsx-dev-runtime";
export default function R() {
    return _jsxDEV("h1", {}, void 0, false, {
        fileName: "<<jsx-config-pragmaFrag.js>>",
        lineNumber: 1,
        columnNumber: 16
    }, this);
}
_c = R;
var _c;
$RefreshReg$(_c, "R");
window.$RefreshReg$ = prevRefreshReg;
window.$RefreshSig$ = prevRefreshSig;
module.meta.hot.accept();
RefreshRuntime.performReactRefresh();
